rust/macros/tests/invalid/target/debug/deps/macros-f50cd260639be006.d
/Users/hhayk/Exercism/rust/macros/tests/invalid/target/debug/deps/macros-f50cd260639be006.d: /Users/hhayk/Exercism/rust/macros/src/lib.rs

/Users/hhayk/Exercism/rust/macros/tests/invalid/target/debug/deps/libmacros-f50cd260639be006.rmeta: /Users/hhayk/Exercism/rust/macros/src/lib.rs

/Users/hhayk/Exercism/rust/macros/src/lib.rs:
